# samv2

./: .gitignore  README.md  checkpoints.py  classifier_data.py  clean_mask.py  datapoint.py  dataset.py  inference_model.py  predict_file.py  predict_random.py  pyproject.toml  resnet.py  train.py
