[project]
name = "sam2-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "sam2>=1.1.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
